--- a/JS_Galeria/css/styles.css
+++ b/JS_Galeria/css/styles.css
@@ -1,7 +1,7 @@
 .contenedor {
     position: relative;
-    width: 800px;
-    height: 400px;
+    width: 980px;
+    height: 670px;
     background-color: black;
     border-radius: 10px;
 }
@@ -36,6 +36,14 @@
     font-size: 36px;
     top : 50%;
     transform: translateY(-50%);
+    
+
+}
+#container {
+	width: 980px;
+	margin: auto;
+	height: 670px;
+	
 }
 .siguiente {
     left: 97%;
