--- a/JS_Validaciones/css/styles.css
+++ b/JS_Validaciones/css/styles.css
@@ -1,3 +1,8 @@
+body {
+	background-image: url('../imagenes/Fondo-Formularios.gif');
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
 
 .error{
     color:rgb(238, 14, 14);
@@ -23,14 +28,14 @@
 }
 
 #form {
-	background-color: rgba(0,0,0,0.6);
-	border-radius: 10px;
-	width: 350px;
-	padding: 10px 25px;
-	margin-right: auto;
-	margin-left: auto;
-	margin-top: 70px;
-	color: white;
+	background-color: rgba(224, 231, 228, 0.6);
+	border-radius: 20px;
+	width: 500px;
+	padding: 60px 80px;
+	margin-right: 50%;
+	margin-left: 20%;
+	margin-top: 80px;
+	color: rgb(85, 47, 4);
 }
 
 h1{
@@ -38,7 +43,7 @@ h1{
 }
 
 td {
-	padding-top: 10px;
+	padding-top: 50px;
 	padding-right: 15px;
 }
 
@@ -52,8 +57,3 @@ td {
 	text-align: center;
 }
 
-body {
-	background-image: url('../img/back.jpg');
-	background-size: 100%;
-	background-repeat: no-repeat;
-}
