--- a/JS_Validaciones/styles.css
+++ b/JS_Validaciones/styles.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url('../imagenes/Fondo-Formularios.gif');
+	background-image: url('../JS_Validaciones/imagenes/Fondo-Formularios.gif');
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
@@ -9,15 +9,6 @@ body {
     font-size: 8px;
 }
 
-#cabecera{
-	background: rgb(25, 30, 71);
-	color: white;
-    height: 70px;
-	width: 100%; /* hacemos que la cabecera ocupe el ancho completo de la página */
-	left: 0; /* Posicionamos la cabecera al lado izquierdo */
-	top: 0; /* Posicionamos la cabecera pegada arriba */
-	position: fixed; /* Hacemos que la cabecera tenga una posición fija */
-}
 .error {
 	border: 1px solid red;
 }
@@ -33,13 +24,14 @@ body {
 	width: 500px;
 	padding: 60px 80px;
 	margin-right: 50%;
-	margin-left: 20%;
-	margin-top: 80px;
+	margin-left: 30%;
+	margin-top: 50px;
 	color: rgb(85, 47, 4);
 }
 
 h1{
 	text-align: center;
+	margin-top: 10px;
 }
 
 td {
@@ -56,4 +48,12 @@ td {
 #btn {
 	text-align: center;
 }
+form {
+    width: 400px;
+    margin: auto;
+    background: rgba(0,0,0,.2);
+    padding:80px 60px;
+    margin-top:20px;
+    border-radius: 10px;
 
+}
